--- a/bsd/testing-library/react-hooks/react-hooks.docs.mdx
+++ b/bsd/testing-library/react-hooks/react-hooks.docs.mdx
@@ -1,18 +1,10 @@
 ---
-description: A ReactHooks component.
+labels: ['module']
+description: 'A general purpose node module'
 ---
 
-import { ReactHooks } from './react-hooks';
+API:
 
-A component that does something special and renders text in a div.
-
-### Component usage
-```js
-<ReactHooks>Hello world!</ReactHooks>
-```
-
-### Render hello world!
-
-```js live
-<ReactHooks>Hello world!</ReactHooks>
+```ts
+function reactHooks(): string;
 ```
