--- a/bsf/components/booking/booking-staff/booking-staff.docs.mdx
+++ b/bsf/components/booking/booking-staff/booking-staff.docs.mdx
@@ -2,7 +2,7 @@
 description: A BookingStaff component.
 ---
 
-A component that does something special and renders text in a div.
+Select staff, and change layout based on the selection.
 
 ### Component usage
 
