--- a/bsf/components/form-errors/form-errors.docs.mdx
+++ b/bsf/components/form-errors/form-errors.docs.mdx
@@ -4,7 +4,7 @@ description: A FormErrors component.
 
 import { BasicFormErrors } from "./form-errors.composition";
 
-A component that does something special and renders text in a div.
+Render form errors.
 
 ### Component usage
 
