--- a/bsf/components/loading/loading-spinner/loading-spinner.docs.mdx
+++ b/bsf/components/loading/loading-spinner/loading-spinner.docs.mdx
@@ -4,7 +4,7 @@ description: A LoadingSpinner component.
 
 import { LoadingSpinner } from "./loading-spinner";
 
-A component that does something special and renders text in a div.
+Show user we are loading component, or waiting for data.
 
 ### Component usage
 
