--- a/bsf/components/staff/staff-form/staff-form.docs.mdx
+++ b/bsf/components/staff/staff-form/staff-form.docs.mdx
@@ -4,7 +4,7 @@ description: A StaffForm component.
 
 import { BasicStaffForm } from "./staff-form.composition";
 
-A component that does something special and renders text in a div.
+StaffForm to handle updating staff or creating new staff.
 
 ### Component usage
 
