--- a/bsf/helpers/validators/validators.docs.mdx
+++ b/bsf/helpers/validators/validators.docs.mdx
@@ -4,10 +4,4 @@ description: A Validators component.
 
 import * as Validators from "./validators";
 
-A component that does something special and renders text in a div.
-
-### Component usage
-
-```js
-<>Hello world!</>
-```
+Validators to validate email, phone, and other things.
