--- a/bsf/hooks/use-position/use-position.docs.mdx
+++ b/bsf/hooks/use-position/use-position.docs.mdx
@@ -6,3 +6,5 @@ labels: ["hook"]
 import { usePosition } from "./use-position";
 
 ## A React Hook that translate position
+
+Use this hook to translate position.
