--- a/bsf/hooks/use-save-bar/use-save-bar.docs.mdx
+++ b/bsf/hooks/use-save-bar/use-save-bar.docs.mdx
@@ -5,11 +5,7 @@ labels: ["use-save-bar", "hook"]
 
 import { useSaveBar } from "./use-save-bar";
 
-## A React Hook to increment a count
-
-Configure ContextualSaveBar and then show it.
-
-### Component usage
+## A React Hook that toggle on and off ContextualSaveBar
 
 In this example we are showing the contextual savebar straight away, in real life you use it with useForm
 
