--- a/bsf/bsf-pkg/bsf-pkg.docs.mdx
+++ b/bsf/bsf-pkg/bsf-pkg.docs.mdx
@@ -7,5 +7,9 @@ A package to export all components
 ### Component usage
 
 ```js
-
+const StaffForm = lazy(() =>
+  import("@jamalsoueidan/bsf.bsf-pkg").then((module) => ({
+    default: module.StaffForm,
+  }))
+);
 ```
