--- a/bsf/components/loading/loading-page/loading-page.docs.mdx
+++ b/bsf/components/loading/loading-page/loading-page.docs.mdx
@@ -5,7 +5,7 @@ description: A LoadingPage component.
 import { Application } from "@jamalsoueidan/bsd.preview.application";
 import { LoadingPage } from "./loading-page";
 
-A component that does something special and renders text in a div.
+Show user we are loading data.
 
 ### Component usage
 
