change create-many-shifts ui

--- a/bsf/components/schedule/create-many-shifts/create-many-shifts.docs.mdx
+++ b/bsf/components/schedule/create-many-shifts/create-many-shifts.docs.mdx
@@ -31,7 +31,7 @@ const onSubmit = useCallback((fieldValues): CreateManyShiftsSubmitResult => {
 }, []);
 
 const submit = useCallback(() => {
-  console.log(ref?.current?.submit());
+  ref?.current?.submit();
 }, [ref]);
 
 return (
