--- a/bsf/components/inputs/input-days/input-days.docs.mdx
+++ b/bsf/components/inputs/input-days/input-days.docs.mdx
@@ -1,5 +1,5 @@
 ---
-description: A SelectDaysInput component.
+description: A InputDays component.
 ---
 
 A component that can pick days.
@@ -8,5 +8,5 @@ A component that can pick days.
 
 ```js
 const field = useField<string[]>([]);
-return <SelectDaysInput field={field} />;
+return <InputDays field={field} />;
 ```
