--- a/bsf/components/inputs/input-language/input-language.docs.mdx
+++ b/bsf/components/inputs/input-language/input-language.docs.mdx
@@ -1,5 +1,5 @@
 ---
-description: A LanguageInput component.
+description: A InputLanguage component.
 ---
 
 A input field for language picker
@@ -8,5 +8,5 @@ A input field for language picker
 
 ```js
 const field = useField("");
-<LanguageInput />;
+<InputLanguage {...field} />;
 ```
