--- a/bsf/components/inputs/input-time-zone/input-time-zone.docs.mdx
+++ b/bsf/components/inputs/input-time-zone/input-time-zone.docs.mdx
@@ -1,5 +1,5 @@
 ---
-description: A TimeZoneInput component.
+description: A InputTimeZone component.
 ---
 
 A component that generate timezone picker.
@@ -8,7 +8,5 @@ A component that generate timezone picker.
 
 ```js
 const field = useField("timezone");
-return <TimeZoneInput {...field} />;
+return <InputTimeZone {...field} />;
 ```
-
-### Render hello world!
