--- a/bsf/components/inputs/input-tags/input-tags.docs.mdx
+++ b/bsf/components/inputs/input-tags/input-tags.docs.mdx
@@ -1,8 +1,6 @@
 ---
-description: A TagInput component.
+description: A InputTags component.
 ---
-
-import { TagInput } from "./tag-input";
 
 A component that render select with all tags
 
@@ -10,5 +8,5 @@ A component that render select with all tags
 
 ```js
 const field = useField("");
-return <TagInput field={field} />;
+return <InputTags field={field} />;
 ```
