fix input and input-staff and add loading-modal

--- a/bsf/components/inputs/input-staff/input-staff.docs.mdx
+++ b/bsf/components/inputs/input-staff/input-staff.docs.mdx
@@ -2,17 +2,10 @@
 description: A InputStaff component.
 ---
 
-import { InputStaff } from './input-staff';
-
-A component that does something special and renders text in a div.
+A component that render list of staff
 
 ### Component usage
+
 ```js
-<InputStaff>Hello world!</InputStaff>
-```
-
-### Render hello world!
-
-```js live
-<InputStaff>Hello world!</InputStaff>
+<InputStaff data={data} {...field} />
 ```
