--- a/bsf/components/inputs/input-timer/input-timer.docs.mdx
+++ b/bsf/components/inputs/input-timer/input-timer.docs.mdx
@@ -6,8 +6,7 @@ A component that render time
 
 ### Component usage
 
-```js
-const field = useField({ start: "", end: "" });
-
-return <InputTimer data={schedule} {...field} />;
+```ts
+const field = useField < InputTimerFieldType > undefined;
+return <InputTimer data={hours} {...field} />;
 ```
