--- a/bsb/mongodb/types/types.docs.mdx
+++ b/bsb/mongodb/types/types.docs.mdx
@@ -3,33 +3,22 @@ labels: ["Types"]
 description: "All types"
 ---
 
-<p>
-  <b>Interface naming rules:</b>
-</p>
+# Interface naming rules
 
-<div>
-  <i>
-    Request define the query params for the api requirements, can be used in
-    both frontend and backend.
-  </i>
-</div>
-`interface NameRequest {}`
+### Request define the query params for the api requirements, can be used in both frontend and backend.
 
-<br />
-<br />
+```ts interface NameRequest {}
 
-<div>
-  <i>
-    Response define the query response for the api, can be used in both frontend
-    and backend
-  </i>
-</div>
-`interface NameResponse {}`
+```
 
-<br />
-<br />
+### Response define the query response for the api, can be used in both frontend and backend
 
-<div>
-  <i>Return define the internal express methods</i>
-</div>
-`interface NameReturn {}`
+```ts interface NameResponse {}
+
+```
+
+### Return define the internal express methods
+
+```ts interface NameReturn {}
+
+```
