--- a/bsf/components/inputs/input-date-drop/input-date-drop.docs.mdx
+++ b/bsf/components/inputs/input-date-drop/input-date-drop.docs.mdx
@@ -2,11 +2,10 @@
 description: A InputDateDrop component.
 ---
 
-
-A component that does something special and renders text in a div.
+A component that render a input, with date selector.
 
 ### Component usage
+
 ```js
 <InputDateDrop>Hello world!</InputDateDrop>
 ```
-
