--- a/bsf/components/inputs/input-date/input-date.docs.mdx
+++ b/bsf/components/inputs/input-date/input-date.docs.mdx
@@ -2,7 +2,7 @@
 description: A InputDate component.
 ---
 
-A component that can pick date
+A component that render just date selector, no label or anything, please see InputDateDrop or InputDateFlat.
 
 ### Component usage
 
