update staff input component

--- a/bsf/components/inputs/input-staff/input-staff.docs.mdx
+++ b/bsf/components/inputs/input-staff/input-staff.docs.mdx
@@ -6,6 +6,7 @@ A component that render list of staff
 
 ### Component usage
 
-```js
-<InputStaff data={data} {...field} />
+```ts
+const field = useField<InputStaffFieldType>(undefined);
+<InputStaff data={data} field={field} />;
 ```
