add 3 new components

--- a/bsf/components/inputs/input-dropdown/input-dropdown.docs.mdx
+++ b/bsf/components/inputs/input-dropdown/input-dropdown.docs.mdx
@@ -2,17 +2,12 @@
 description: A InputDropdown component.
 ---
 
-import { InputDropdown } from './input-dropdown';
+import { InputDropdown } from "./input-dropdown";
 
-A component that does something special and renders text in a div.
+A component that render dropdown with selection options.
 
 ### Component usage
+
 ```js
-<InputDropdown>Hello world!</InputDropdown>
-```
-
-### Render hello world!
-
-```js live
-<InputDropdown>Hello world!</InputDropdown>
+<InputDropdown field={field} options={options} input={{ label: "User list", placeholder: "Click and pick a user" }} />
 ```
