--- a/bsf/components/inputs/input-auto-complete/input-auto-complete.docs.mdx
+++ b/bsf/components/inputs/input-auto-complete/input-auto-complete.docs.mdx
@@ -5,3 +5,50 @@ description: A InputAutoComplete component.
 A component that render select with search and list segments, can't be used directly with useField
 
 ### Component usage
+
+```js
+const [value, setValue] = useState < string > "a";
+const [loading] = useState < boolean > false;
+
+const options: Array<InputAutoCompleteOption> = useMemo(() => {
+  const data =
+    value.length > 2 ? mock?.filter((r) => r.firstName.indexOf(value) > -1 || r.lastName.indexOf(value) > -1) : mock;
+  return data.map((r) => ({
+    label: `${r.firstName} ${r.lastName}`,
+    value: r.customerId.toString(),
+  }));
+}, [value]);
+
+const onSelect = useCallback(
+  (option: InputAutoCompleteOption | undefined) => {
+    if (option) {
+      field.onChange({
+        customerId: parseInt(option.value.toString(), 10),
+        fullName: option.label,
+      });
+    } else {
+      field.onChange(undefined);
+    }
+  },
+  [field],
+);
+
+const onSearch = useCallback((value: string | null) => {
+  setValue(value || "a");
+}, []);
+
+const selectedOption = useMemo(
+  () => options.find((o) => o.value === field.value?.customerId?.toString()),
+  [field.value?.customerId, options],
+);
+
+return (
+  <InputAutoComplete
+    options={options}
+    onSelect={onSelect}
+    onSearch={onSearch}
+    selectedOption={selectedOption}
+    input={{ error: field.error, loading }}
+  />
+);
+```
