--- a/bsf/components/inputs/input-button/input-button.docs.mdx
+++ b/bsf/components/inputs/input-button/input-button.docs.mdx
@@ -2,7 +2,7 @@
 description: A InputButton component.
 ---
 
-A component that extend button and handle error
+A component that handle button error, should not be used directly, can be used with popup-over list.
 
 ### Component usage
 
