--- a/bsf/components/inputs/input-label-button/input-label-button.docs.mdx
+++ b/bsf/components/inputs/input-label-button/input-label-button.docs.mdx
@@ -2,17 +2,12 @@
 description: A InputLabelButton component.
 ---
 
-import { InputLabelButton } from './input-label-button';
-
-A component that does something special and renders text in a div.
+A component that render button wrapped in label, are used with dropdown and autocomplete etc.
 
 ### Component usage
+
 ```js
-<InputLabelButton>Hello world!</InputLabelButton>
-```
-
-### Render hello world!
-
-```js live
-<InputLabelButton>Hello world!</InputLabelButton>
+<InputLabelButton label="label" error="error">
+  Error
+</InputLabelButton>
 ```
