fix button error, update input-staff and input-auto-complete

--- a/bsf/components/inputs/input-auto-complete/input-auto-complete.docs.mdx
+++ b/bsf/components/inputs/input-auto-complete/input-auto-complete.docs.mdx
@@ -34,7 +34,7 @@ const onSelect = useCallback(
 );
 
 const onSearch = useCallback((value: string | null) => {
-  setValue(value || "a");
+  setValue(value || "");
 }, []);
 
 const selectedOption = useMemo(
