fix input-staff error dropdown

--- a/bsf/components/inputs/input-staff/input-staff.docs.mdx
+++ b/bsf/components/inputs/input-staff/input-staff.docs.mdx
@@ -7,6 +7,6 @@ A component that render list of staff
 ### Component usage
 
 ```ts
-const field = useField<InputStaffFieldType>(undefined);
+const field = useField<InputStaffField>(undefined);
 <InputStaff data={data} field={field} />;
 ```
