--- a/bsf/components/inputs/input-timer-divider/input-timer-divider.docs.mdx
+++ b/bsf/components/inputs/input-timer-divider/input-timer-divider.docs.mdx
@@ -9,7 +9,7 @@ A component that render time in divider (morning, afternoon, evening)
 ### Component usage
 
 ```js
-const field = useField<InputTimerDividerFieldType>(undefined);
+const field = useField<InputTimerDividerField>(undefined);
 
 <Card title="no optionLabel" sectioned>
   <InputTimerDivider data={mock} field={field} />
