--- a/bsf/components/inputs/input-timer-drop/input-timer-drop.docs.mdx
+++ b/bsf/components/inputs/input-timer-drop/input-timer-drop.docs.mdx
@@ -9,7 +9,7 @@ A component that render time in a select
 ### Component usage
 
 ```js
-const field = useField<InputTimerFieldType>(undefined);
+const field = useField<InputTimerField>(undefined);
 
 <Card title="no optionLabel" sectioned>
   <InputTimerDrop data={mock} field={field} />
