add schedule-calendar and provider modal

--- a/bsf/components/booking/booking-calendar/booking-calendar.docs.mdx
+++ b/bsf/components/booking/booking-calendar/booking-calendar.docs.mdx
@@ -2,18 +2,10 @@
 description: A BookingCalendar component.
 ---
 
-import { BookingCalendar } from "./booking-calendar";
-
-A component that does show calendar with booking events.
+A component that render booking calendar.
 
 ### Component usage
 
 ```js
 <BookingCalendar data={mock} />
-```
-
-### Render hello world!
-
-```js live
-<BookingCalendar />
 ```
