update shifts forms

--- a/bsf/components/schedule/create-many-shifts/create-many-shifts.docs.mdx
+++ b/bsf/components/schedule/create-many-shifts/create-many-shifts.docs.mdx
@@ -36,11 +36,7 @@ const submit = useCallback(() => {
 
 return (
   <Card sectioned primaryFooterAction={{ content: "Submit", onAction: submit }}>
-    <CreateManyShifts
-      date={new Date().toDateString()}
-      onSubmit={onSubmit}
-      ref={ref}
-    />
+    <CreateManyShifts selectedDate={new Date()} onSubmit={onSubmit} ref={ref} />
   </Card>
 );
 ```
