--- a/bsf/components/schedule/create-one-shift/create-one-shift.docs.mdx
+++ b/bsf/components/schedule/create-one-shift/create-one-shift.docs.mdx
@@ -22,11 +22,7 @@ const submit = useCallback(() => {
 
 return (
   <Card sectioned primaryFooterAction={{ content: "Submit", onAction: submit }}>
-    <CreateOneShift
-      selectedDate={new Date().toDateString()}
-      onSubmit={onSubmit}
-      ref={ref}
-    />
+    <CreateOneShift selectedDate={new Date()} onSubmit={onSubmit} ref={ref} />
   </Card>
 );
 ```
