add more test, and make sure models is not init twice

--- a/bsb/services/notification/notification.docs.mdx
+++ b/bsb/services/notification/notification.docs.mdx
@@ -1,6 +1,6 @@
 ---
-labels: ['module']
-description: 'A general purpose node module'
+labels: ["module"]
+description: "A general purpose node module"
 ---
 
 API:
