--- a/bsd/testing-library/mongodb/mongodb.docs.mdx
+++ b/bsd/testing-library/mongodb/mongodb.docs.mdx
@@ -8,7 +8,7 @@ description: 'This testing-lib for mongodb memory server.'
 Then just use the models normally.
 
 ```ts
-require("@jamalsoueidan/bsd.testing-library.mongodb/mongodb.spec");
+require("@jamalsoueidan/bsd.testing-library.mongodb/mongodb.jest");
 ```
 
 
