--- a/bsf/providers/modal/modal-context.docs.mdx
+++ b/bsf/providers/modal/modal-context.docs.mdx
@@ -17,7 +17,7 @@ function MockComponent() {
     setPrimaryAction({
       content: "Tilføj",
       onAction: () => {
-        console.log("nice");
+        console.log("Add");
       },
     });
   }, []);
