--- a/bsf/polyfills/json/json.docs.mdx
+++ b/bsf/polyfills/json/json.docs.mdx
@@ -1,10 +1,11 @@
 ---
-labels: ['module']
-description: 'A general purpose node module'
+labels: ["module"]
+description: "A polyfill for JSON.parse"
 ---
 
 API:
 
 ```ts
-function json(): string;
+import '@jamalsoueidan/bsf.polyfills.json';
+JSON.parse(text))
 ```
