--- a/bsf/hooks/use-tag/use-tag.docs.mdx
+++ b/bsf/hooks/use-tag/use-tag.docs.mdx
@@ -8,6 +8,6 @@ A component that return tag-text for the tag-color
 ### Component usage
 
 ```js
-const { select } = useTag();
-return <>{select("#4b6043")}</>;
+const { selectTag } = useTag();
+return <>{selectTag("#4b6043")}</>;
 ```
