add input-multi-select, and add color to input-tags

--- a/bsf/components/inputs/input-button/input-button.docs.mdx
+++ b/bsf/components/inputs/input-button/input-button.docs.mdx
@@ -2,7 +2,7 @@
 description: A InputButton component.
 ---
 
-A component that handle button error, should not be used directly, can be used with popup-over list.
+A component that handle button error, polaris add thick border, this inputbutton change that to thin border, should not be used directly, can be used with popup-over list.
 
 ### Component usage
 
