--- a/bsf/components/inputs/input-date-flat/input-date-flat.docs.mdx
+++ b/bsf/components/inputs/input-date-flat/input-date-flat.docs.mdx
@@ -10,13 +10,7 @@ A component that render flat date component with label
 const [date, setDate] = useState<Range | undefined>(undefined);
 const field = useField(undefined);
 
-const onMonthChange = useCallback(
-  (value: Range) => {
-    setDate(value);
-  },
-  [setDate]
-);
-<InputDateFlat field={field} onMonthChange={onMonthChange} />
+<InputDateFlat field={field} onMonthChange={setDate} />
 <Text variant="bodyMd" as="p">
   {field.value ? format(field.value, "PPP") : ""}
 </Text>
