--- a/bsf/hooks/use-tag/use-tag.docs.mdx
+++ b/bsf/hooks/use-tag/use-tag.docs.mdx
@@ -9,5 +9,5 @@ A component that return tag-text for the tag-color
 
 ```js
 const { selectTag } = useTag();
-return <>{selectTag("#4b6043")}</>;
+return <>{selectTag(Tag.weekday)}</>;
 ```
