--- a/bsf/components/inputs/input-date-drop/input-date-drop.docs.mdx
+++ b/bsf/components/inputs/input-date-drop/input-date-drop.docs.mdx
@@ -10,14 +10,7 @@ A component that render a input, with date selector.
 const [date, setDate] = useState<Range | undefined>(undefined);
 const field = useField(undefined);
 
-const onMonthChange = useCallback(
-  (value: Range) => {
-    setDate(value);
-  },
-  [setDate],
-);
-
-<InputDateDrop field={field} onMonthChange={onMonthChange} />
+<InputDateDrop field={field} onMonthChange={setDate} />
 <Text variant="bodyMd" as="p">
   {field.value ? format(field.value, "PPP") : ""}
 </Text>
