--- a/bsf/components/inputs/input-date/input-date.docs.mdx
+++ b/bsf/components/inputs/input-date/input-date.docs.mdx
@@ -10,7 +10,7 @@ A component that render just date selector, no label or anything, please see Inp
 const field = useField(undefined);
 
 return (
-  <InputDate label="Date" {...field} />
+  <InputDate input={{label: "Date"}} field={field} />
   <Text variant="bodyMd" as="p">
     {field.value ? format(field.value, "PPP") : ""}
   </Text>
