--- a/bsb/routes/booking/booking.docs.mdx
+++ b/bsb/routes/booking/booking.docs.mdx
@@ -1,10 +1,10 @@
 ---
-labels: ['express', 'node', 'route']
-description: 'An express route'
+labels: ["express", "node", "route"]
+description: "Booking express route"
 ---
 
 API:
 
 ```ts
-function getBookingRoute()
+function BookingServiceGetAll();
 ```
