bsf: add edit-one-shift component

--- a/bsf/components/schedule/create-many-shifts/create-many-shifts.docs.mdx
+++ b/bsf/components/schedule/create-many-shifts/create-many-shifts.docs.mdx
@@ -2,8 +2,8 @@
 description: A CreateManyShifts component.
 ---
 
-This component generates a shift array and has a onSubmit handler that dispatches an event when the form is successfully submitted.
-You must handle submit via ref, as this component can be used in both modal and other pages, that needs to place submit button different locations on the page (see example)!
+This component creates array of shifts and has a onSubmit handler that sends an event when the form is submitted successfully.
+You must handle submit via ref because this component can be used in both modal and other pages that need to put the submit button in different places on the page (see example).
 
 ```json
 [
