bsf: add more fields for staff-form

--- a/bsf/components/staff/staff-form/staff-form.docs.mdx
+++ b/bsf/components/staff/staff-form/staff-form.docs.mdx
@@ -13,7 +13,7 @@ StaffForm to handle updating staff or creating new staff.
   data={staff}
   action={() => {}}
   titleMetadata={<Badge status="success">Active</Badge>}
-  disallowEditing={{ group: false, active: false }}
+  allowEditing={{ group: true, active: true }}
 ></StaffForm>
 ```
 
