bsb: add staff route

--- a/bsb/middlewares/handle-controller/handle-controller.docs.mdx
+++ b/bsb/middlewares/handle-controller/handle-controller.docs.mdx
@@ -1,12 +1,12 @@
 ---
 labels: ["module", "express"]
-description: "Handle route"
+description: "Handle controller"
 ---
 
 API:
 
 ```ts
-router.get("/url", handleRoute(controller.user));
+router.get("/url", handleController(controller.user));
 
 // controller.user
 export const user = async ({
