bsb: add schedule route

--- a/bsb/routes/widget/widget.docs.mdx
+++ b/bsb/routes/widget/widget.docs.mdx
@@ -1,10 +1,10 @@
 ---
-labels: ['express', 'node', 'route']
-description: 'An express route'
+labels: ["express", "node", "route"]
+description: "An widget express route"
 ---
 
 API:
 
 ```ts
-function getWidgetRoute()
+function getWidgetRoute();
 ```
