--- a/bsb/routes/staff/staff.docs.mdx
+++ b/bsb/routes/staff/staff.docs.mdx
@@ -1,10 +1,10 @@
 ---
-labels: ['express', 'node', 'route']
-description: 'An express route'
+labels: ["express", "node", "route"]
+description: "An staff express route"
 ---
 
 API:
 
 ```ts
-function getStaffRoute()
+function getStaffRoute();
 ```
