--- a/bsf/components/schedule/schedule-form-one-shift/schedule-form-one-shift.docs.mdx
+++ b/bsf/components/schedule/schedule-form-one-shift/schedule-form-one-shift.docs.mdx
@@ -20,9 +20,15 @@ const submit = useCallback(() => {
   ref?.current?.submit();
 }, [ref]);
 
+const initData: ScheduleFormOneShiftBody = {
+  end: setMinutes(setHours(new Date(), 16), 0),
+  start: setMinutes(setHours(new Date(), 10), 0),
+  tag: Tag.all_day,
+};
+
 return (
   <Card sectioned primaryFooterAction={{ content: "Submit", onAction: submit }}>
-    <CreateOneShift selectedDate={new Date()} onSubmit={onSubmit} ref={ref} />
+    <ScheduleFormOneShift data={initData} onSubmit={onSubmit} ref={ref} />
   </Card>
 );
 ```
