bsf: fix schedule-forms

--- a/bsf/helpers/validators/validators.docs.mdx
+++ b/bsf/helpers/validators/validators.docs.mdx
@@ -1,7 +1,6 @@
 ---
+labels: ["helper"]
 description: A Validators component.
 ---
-
-import * as Validators from "./validators";
 
 Validators to validate email, phone, and other things.
