bsf: add booking,staff,widget service for frontend

--- a/bsf/state/schedule/schedule.docs.mdx
+++ b/bsf/state/schedule/schedule.docs.mdx
@@ -1,12 +1,6 @@
 ---
-description: A Schedule component.
+description: A Schedule service.
 labels: ["hook", "service"]
 ---
 
 Schedule service to call api
-
-### Component usage
-
-```js
-const {...} = useStaffSchedule();
-```
