bsb: add collection route

--- a/bsb/routes/booking/booking.docs.mdx
+++ b/bsb/routes/booking/booking.docs.mdx
@@ -3,8 +3,4 @@ labels: ["express", "route"]
 description: "An booking express route"
 ---
 
-API:
-
-```ts
-function BookingServiceGetAll();
-```
+Booking route endpoints
