bsf: update ability provider

--- a/bsf/providers/ability/ability-context.docs.mdx
+++ b/bsf/providers/ability/ability-context.docs.mdx
@@ -1,41 +1,20 @@
 ---
 description: Ability context.
-labels: ['context']
+labels: ["context"]
 ---
 
-import { AbilityContext } from './ability-context';
-import { AbilityProvider } from './ability-context-provider';
-import { MockComponent } from './ability-context.composition';
+## React Ability Context
 
-## React Theme Context
-
-This is a simple [React Context](https://reactjs.org/docs/context.html) shared as a Bit component.
-Use this component to apply a theme as a context to set on it's children.
+Provider which restricts what resources a given user is allowed to access.
 
 ### Component usage
 
 ```tsx
 () => {
-import React, { useContext } from 'react';
-import { ThemeProvider } from './theme-context-provider';
-import { ThemeContext } from './theme-context';
-
-<AbilityProvider color="blue">
-  // My lovely children now get a theme!
-  <MockComponent />
-</AbilityProvider>;
-```
-
-### Using props to customize the theme
-
-Change the color to see the text change:
-
-```tsx live
-() => {
-  return (
-    <AbilityProvider color="red">
-      <MockComponent />
-    </AbilityProvider>
-  );
+  const parse = parseJwt(localStorage.getItem("token") || "");
+  <AbilityProvider ability={defineAbilityFor(parse)}>
+    // My lovely children now get a theme!
+    <MockComponent />
+  </AbilityProvider>;
 };
 ```
