frontend: add ability to preview

--- a/bit-dev/preview/with-application/with-application.docs.mdx
+++ b/bit-dev/preview/with-application/with-application.docs.mdx
@@ -11,6 +11,6 @@ export const Basic = withApplication(
   () => {
     return <>This is for Bit.dev, works as wrapper!</>;
   },
-  { pageTitle: "page title" },
+  { title: "page title" },
 );
 ```
