fix last issues before tagging

--- a/frontend/components/loading/loading-page/loading-page.docs.mdx
+++ b/frontend/components/loading/loading-page/loading-page.docs.mdx
@@ -2,7 +2,6 @@
 description: A LoadingPage component.
 ---
 
-import { Application } from "@jamalsoueidan/bit-dev.preview.application";
 import { LoadingPage } from "./loading-page";
 
 Show user we are loading data.
@@ -10,5 +9,5 @@ Show user we are loading data.
 ### Component usage
 
 ```js
-<LoadingPage title="Loading Data"></LoadingPage>
+<LoadingPage title="Loading Data" />
 ```
